config/3-fl-gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
  labels:
    app: fl-traefik
  name: fl-traefik
  namespace: flowengine
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fl-traefik
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: fl-traefik
    spec:
      containers:
        - args:
            - --api.insecure
            - --accesslog
            - --log.level=DEBUG
            - --entrypoints.fl-online.Address=:9000
            - --entrypoints.flowengine.Address=:9001
            - --providers.kubernetesingress.labelselector=app=fl-traefik
            - --entrypoints.traefik.Address=:9002
            - --providers.kubernetescrd
            - --providers.kubernetesingress
          image: traefik:v2.5
          imagePullPolicy: IfNotPresent
          name: traefik
          ports:
            - containerPort: 9000
              name: fl-online
              protocol: TCP
            - containerPort: 9002
              name: traefik
              protocol: TCP
            - containerPort: 9001
              name: flowengine
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      serviceAccount: fl-traefik-ingress-controller
      serviceAccountName: fl-traefik-ingress-controller
      terminationGracePeriodSeconds: 30
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: flowengine
    traefik.ingress.kubernetes.io/router.middlewares: flowengine-fl-stripurl@kubernetescrd
  labels:
    app: fl-traefik
  name: flowengine-gateway
  namespace: flowengine
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fl-ui
                port:
                  number: 80
          - path: /automl-manager
            pathType: Prefix
            backend:
              service:
                name: fl-engine-manager
                port:
                  number: 80
          - path: /engine
            pathType: Prefix
            backend:
              service:
                name: fl-ui
                port:
                  number: 80
          - path: /sds
            pathType: Prefix
            backend:
              service:
                name: fl-ui
                port:
                  number: 80
          - path: /template-market
            pathType: Prefix
            backend:
              service:
                name: fl-hub
                port:
                  number: 80
          - path: /sds-workbench
            pathType: Prefix
            backend:
              service:
                name: fl-data
                port:
                  number: 80
          - path: /keystone
            pathType: Prefix
            backend:
              service:
                name: fl-engine-manager
                port:
                  number: 80
---
apiVersion: v1
kind: Service
metadata:
  name: fl-traefik
  namespace: flowengine
spec:
  ports:
    - name: flowengine
      nodePort: 31101
      port: 9001
      protocol: TCP
      targetPort: 9001
    - name: traefik
      nodePort: 31102
      port: 9002
      protocol: TCP
      targetPort: 9002
    - name: fl-online
      nodePort: 31100
      port: 80
      protocol: TCP
      targetPort: 9000
  selector:
    app: fl-traefik
  sessionAffinity: None
  type: NodePort
---
apiVersion: v1
kind: List
items:
  - apiVersion: traefik.containo.us/v1alpha1
    kind: Middleware
    metadata:
      name: fl-stripurl
      namespace: flowengine
    spec:
      stripPrefix:
        forceSlash: false
        prefixes:
          - /template-market
          - /sds-workbench
